--- a/Rukyou_Chat/View/ChatBox.xaml
+++ b/Rukyou_Chat/View/ChatBox.xaml
@@ -27,8 +27,8 @@
             </TextBlock.Background>
         </TextBlock>
         <DockPanel HorizontalAlignment="Stretch" Grid.Row="1" VerticalAlignment="Stretch" LastChildFill="True">
-            <Button x:Name="button" Content="Send" HorizontalAlignment="Right" DockPanel.Dock="Right"
-                    VerticalAlignment="Center" Margin="5,0" MinHeight="26" IsDefault="True" Padding="5,0" Cursor="Hand"/>
+            <Button x:Name="btnSend" Content="Send" HorizontalAlignment="Right" DockPanel.Dock="Right"
+                    VerticalAlignment="Center" Margin="5,0" MinHeight="26" IsDefault="True" Padding="5,0" Cursor="Hand" Click="btnSend_Click"/>
             <TextBox x:Name="txtInput" TextWrapping="Wrap" VerticalAlignment="Center" TextAlignment="Left"
                      DockPanel.Dock="Left" Margin="5,0" MinHeight="26" Cursor="IBeam"/>
         </DockPanel>
